--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,50 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --card-title-weight: 785;
+  --card-text-weight: 465;
+  --bg-dot-color: #000;
+  --bg-gradient: #007f0c, #004306;
+  --label-color: #000;
+  --difference-color: #00cc14;
+  --heart-icon-contour: #00cc14;
+  --heart-icon-sparks: #ff0000;
+  --heart-icon-core: transparent;
+  --heart-icon-body: transparent;
+}
+
+:root.theme-light {
+  --bg-color: #fff;
+  --accent-color: #000;
+  --card-title-weight: 700;
+  --card-text-weight: 400;
+  --bg-dot-color: #d3d3d3;
+  --bg-gradient: #e7e7e7 0.01%, #1a1a1a;
+  --label-color: #fff;
+  --difference-color: #fff;
+  --heart-icon-contour: #000;
+  --heart-icon-sparks: #ff0000;
+  --heart-icon-core: transparent;
+  --heart-icon-body: transparent;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000;
+    --accent-color: #00cc14;
+    --card-title-weight: 785;
+    --card-text-weight: 465;
+    --bg-dot-color: #000;
+    --bg-gradient: #007f0c, #004306;
+    --label-color: #000;
+    --difference-color: #00cc14;
+    --heart-icon-contour: #00cc14;
+    --heart-icon-sparks: #ff0000;
+    --heart-icon-core: transparent;
+    --heart-icon-body: transparent;
+  }
+}
