--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,8 @@ h6,
 p,
 ul,
 ol,
-li {
+li,
+button {
   margin: 0;
   padding: 0;
 }
@@ -35,6 +36,11 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+}
+
+button {
+  appearance: none;
+  border: none;
 }
 
 ul,
