--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
 ✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
@@ -15,6 +14,505 @@
 */
 
 .page {
+  display: grid;
+  place-items: center;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  font-family: var(--font-family);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-image: repeating-linear-gradient(
+      var(--bg-dot-color),
+      var(--bg-dot-color) 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--bg-dot-color),
+      var(--bg-dot-color) 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, var(--bg-gradient));
+}
+
+.header,
+.main {
+  inline-size: 100%;
+  max-inline-size: 696px;
+}
+
+.header {
+  font-family: var(--second-family);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  gap: clamp(1.25rem, 1.14rem + 0.4695vw, 1.5625rem);
+  border: 2px solid var(--accent-color);
+  min-block-size: clamp(20.4375rem, 19.5352rem + 3.8498vw, 23rem);;
+  text-transform: uppercase;
+  padding-block-end: 25px;
+  margin: 100px auto;
+  background-color: var(--bg-color);
+}
+
+.header__title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.header__title__text {
+  display: block;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-align: center;
+}
+
+.header__title__text_large {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__theme-menu {
+  padding-inline-start: 20px;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.theme-menu__button {
+  position: relative;
+  background-color: transparent;
+  border: none;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  inset-inline-start: -20px;
+  inset-block-start: 0;
+  animation-name: choosing;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  inline-size: 100%;
+  block-size: 2px;
+  background-color: var(--accent-color);
+  inset-inline-start: 0;
+  inset-block-end: -3px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+}
+
+.theme-menu__button:hover,
+.theme-menu__button:active {
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible:after {
+  transform: scaleX(1);
+}
+
+.card__list {
+  display: flex;
+  flex-direction: column;
+  gap: 51px;
+}
+
+.card {
+  border: 2px solid var(--accent-color);
+}
+
+.card__title {
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.5rem;
+  padding: 3px 10px;
+}
+
+.card__image-wrapper {
+  position: relative;
+  border-block-start: 2px solid var(--accent-color);
+  border-block-end: 2px solid var(--accent-color);
+}
+
+.card__image {
+  display: block;
+  inline-size: 100%;
+}
+
+.card__image.brightness {
+  filter: brightness(60%);
+}
+
+.card__image.contrast {
+  filter: contrast(150%);
+}
+
+.card__image.blur {
+  filter: blur(3.5px);
+}
+
+.card__image.opacity {
+  filter: opacity(80%);
+}
+
+.card__image.grayscale {
+  filter: grayscale(1);
+}
+
+.card__image.saturate {
+  filter: saturate(150%);
+}
+
+.card__image.hue-rotate {
+  filter: hue-rotate(45deg);
+}
+
+.card__image.wow-filter {
+  filter: hue-rotate(150deg) invert(80%) contrast(150%) saturate(120%);
+}
+
+.card__label {
+  position: absolute;
+  inset-block-start: 25px;
+  inset-inline-end: clamp(0.8125rem, 0.5484rem + 1.1268vw, 1.5625rem);
+  font-family: var(--second-family);
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  color: var(--accent-color);
+  font-size: 14px;
+  text-shadow: -1px 0 var(--label-color), 0 1px var(--label-color),
+    1px 0 var(--label-color), 0 -1px var(--label-color);
+}
+
+@supports (
+  (text-stroke: 1px var(--label-color)) or
+    (-webkit-text-stroke: 1px var(--label-color))
+) {
+  .card__label {
+    -webkit-text-stroke: 1px var(--label-color);
+    text-stroke: 1px var(--label-color);
+    text-shadow: none;
+  }
+}
+
+.card__text-content {
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  gap: clamp(1.5625rem, 1.5515rem + 0.0469vw, 1.59375rem);
+  background-color: var(--bg-color);
+}
+
+.card__text {
+  font-size: 18px;
+  line-height: 117%;
+  font-weight: 400;
+  color: var(--accent-color);
+}
+
+.card__buttons {
+  display: inline-flex;
+  align-items: stretch;
+  align-self: flex-end;
+  gap: 4px;
+}
+
+.card__icon-button {
+  display: flex;
+  min-block-size: 38px;
+  background-color: transparent;
+  border: 2px solid transparent;
+  transition: border 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+}
+
+.like-icon {
+  inline-size: 100%;
+  block-size: 100%;
+  cursor: pointer;
+}
+
+.like-icon .main-body {
+  transition-property: fill;
+  transition-timing-function: linear;
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+
+.like-icon:hover .main-body {
+  transition-property: fill;
+  transition-delay: 0.05s;
+  --heart-icon-body: var(--heart-icon-contour);
+}
+
+.like-icon:active .main-body {
+  transition-property: fill;
+  transition-delay: 0.05s;
+  --heart-icon-body: var(--heart-icon-sparks);
+}
+
+.like-icon .core {
+  transition-property: fill;
+  transition-duration: 0.3s;
+  transition-delay: 0.03s;
+  transition-timing-function: linear;
+}
+
+.like-icon:hover .core {
+  transition-property: fill;
+  transition-delay: 0s;
+  --heart-icon-core: var(--heart-icon-contour);
+}
+
+.like-icon:active .core {
+  transition-property: fill;
+  transition-delay: 0s;
+  --heart-icon-core: var(--heart-icon-sparks);
+}
+
+.like-icon .contour {
+  transition-property: fill;
+  transition-delay: 0s;
+  transition-duration: 0.1s;
+}
+
+.like-icon:active .contour {
+  transition-property: fill;
+  transition-delay: 0.06s;
+  transition-duration: 0.3s;
+  --heart-icon-contour: var(--heart-icon-sparks);
+}
+
+.like-icon .sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .heart {
+  animation-name: heartScale;
+  animation-delay: 0.1s;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in;
+  transform-origin: center;
+  --heart-icon-contour: var(--heart-icon-sparks);
+  --heart-icon-core: var(--heart-icon-sparks);
+  --heart-icon-body: var(--heart-icon-sparks);
+}
+
+.like-icon.is-liked .sparks {
+  animation-name: sparks;
+  animation-delay: 0.3s;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in;
+}
+
+.card__like-button {
+  min-inline-size: 130px;
+  min-block-size: 38px;
+}
+
+.button_primary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+  cursor: pointer;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+}
+
+.button_primary::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--accent-color);
+  block-size: 100%;
+  inline-size: 100%;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.button_primary:hover::after {
+  transform: scaleX(1);
+}
+
+.button_primary:focus {
+  outline: none;
+}
+
+.button_primary:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.button__text {
+  font-family: var(--second-family);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 90%;
+  position: relative;
+  z-index: 1;
+  color: var(--difference-color);
+  mix-blend-mode: difference;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  margin: 52px auto 105px;
+}
+
+.footer__button {
+  gap: 8px;
+  align-items: center;
+  min-inline-size: 335px;
+  min-block-size: 51px;
+}
+
+.footer__button__icon {
+  inline-size: 21px;
+  block-size: 21px;
+  position: relative;
+  z-index: 1;
+  color: var(--difference-color);
+  mix-blend-mode: difference;
+}
+
+.modal {
+  position: fixed;
+  display: grid;
+  gap: 30px;
+  border: 2px solid var(--accent-color);
+  max-inline-size: clamp(21.3125rem, 21.0484rem + 1.1268vw, 22.0625rem);
+  inline-size: 100%;
+  padding: 30px;
+  background-color: var(--bg-color);
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.modal:not([open]) {
+  pointer-events: none;
+  opacity: 0;
+}
+
+.modal::backdrop {
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal__heading {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 20px;
+}
+
+.modal__heading__icon {
+  inline-size: 39px;
+  block-size: 39px;
+  color: var(--accent-color);
+}
+
+.modal__heading__title {
+  font-family: var(--second-family);
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 150%;
+  color: var(--accent-color);
+}
+
+.modal__button {
+  min-block-size: 38px;
+  inline-size: 100%;
+}
+
+@media (width <= 375px) {
+  .footer__button {
+    flex-direction: column;
+    min-block-size: 84px;
+    min-inline-size: 306px;
+  }
+
+  .footer__button__icon {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+
+  .modal {
+    padding: 30px 40px;
+  }
+}
+
+@keyframes choosing {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-4px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes heartScale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
