fix variation fonts settings and import, add dialog form

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -50,4 +50,15 @@
     --heart-icon-core: transparent;
     --heart-icon-body: transparent;
   }
+
+  @supports (font-variation-settings: normal) {
+    .card__title {
+      font-weight: 785;
+    }
+
+    .card__text {
+      font-weight: 465;
+    }
+  }
+
 }
