--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -4,8 +4,8 @@
   font-display: swap;
   font-family: "Inter";
   src: local("Inter-Variable"),
-    url("../fonts/Inter-Variable.woff2") format("woff2 supports variations"),
-    url("../fonts/Inter-Variable.woff2") format("woff2-variations");
+    url("Inter-Variable.woff2") format("woff2 supports variations"),
+    url("Inter-Variable.woff2") format("woff2-variations");
   font-weight: 400 785;
 }
 
@@ -15,5 +15,5 @@
   font-style: normal;
   font-weight: 400;
   src: local("PressStart2P-Regular"),
-    url("../fonts/PressStart2P-Regular.woff") format("woff");
+    url("PressStart2P-Regular.woff") format("woff");
 }
