--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,117 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.like-icon {
+  inline-size: 100%;
+  block-size: 100%;
+  cursor: pointer;
+}
+
+.like-icon .main-body {
+  transition-property: fill;
+  transition-timing-function: linear;
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+
+.like-icon:hover .main-body {
+  transition-property: fill;
+  transition-delay: 0.05s;
+  --heart-icon-body: var(--heart-icon-contour);
+}
+
+.like-icon .core {
+  transition-property: fill;
+  transition-duration: 0.3s;
+  transition-delay: 0.03s;
+  transition-timing-function: linear;
+}
+
+.like-icon:hover .core {
+  transition-property: fill;
+  transition-delay: 0s;
+  --heart-icon-core: var(--heart-icon-contour);
+}
+
+.like-icon .contour {
+  transition-property: fill;
+  transition-delay: 0s;
+  transition-duration: 0.1s;
+}
+
+.like-icon .sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .core {
+  transition-property: fill;
+  transition-delay: 0s;
+  --heart-icon-core: var(--heart-icon-sparks);
+}
+
+.like-icon.is-liked .main-body {
+  transition-property: fill;
+  transition-delay: 0.05s;
+  --heart-icon-body: var(--heart-icon-sparks);
+}
+
+.like-icon.is-liked .contour {
+  transition-property: fill;
+  transition-delay: 0.06s;
+  transition-duration: 0.3s;
+  --heart-icon-contour: var(--heart-icon-sparks);
+}
+
+.like-icon.is-liked .heart {
+  animation-name: heartScale;
+  animation-direction: alternate;
+  animation-delay: 0.1s;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in;
+  transform-origin: center;
+  --heart-icon-contour: var(--heart-icon-sparks);
+  --heart-icon-core: var(--heart-icon-sparks);
+  --heart-icon-body: var(--heart-icon-sparks);
+}
+
+.like-icon.is-liked .sparks {
+  animation-name: sparks;
+  animation-direction: alternate;
+  animation-delay: 0.3s;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in;
+}
+
+@keyframes choosing {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(4px);
+  }
+}
+
+@keyframes heartScale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
