--- a/styles/style.css
+++ b/styles/style.css
@@ -54,8 +54,8 @@
   justify-content: end;
   gap: clamp(1.25rem, 1.14rem + 0.4695vw, 1.5625rem);
   border: 2px solid var(--accent-color);
-  min-block-size: clamp(20.4375rem, 19.5352rem + 3.8498vw, 23rem);
   text-transform: uppercase;
+  padding-block-start: 136px;
   padding-block-end: 25px;
   margin: 100px auto;
   background-color: var(--bg-color);
@@ -67,13 +67,12 @@
   gap: 20px;
 }
 
-.header__title__text {
-  display: block;
+.header__title__heading {
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   text-align: center;
 }
 
-.header__title__text_large {
+.header__logo {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
 }
 
@@ -111,6 +110,7 @@
   animation-duration: 0.5s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+  animation-direction: alternate;
 }
 
 .theme-menu__button::after {
@@ -153,7 +153,7 @@
 .card__title {
   background-color: var(--bg-color);
   color: var(--accent-color);
-  font-weight: 700;
+  font-variation-settings: 'wght' 700;
   font-size: 18px;
   line-height: 1.5rem;
   padding: 3px 10px;
@@ -237,7 +237,7 @@
 .card__text {
   font-size: 18px;
   line-height: 117%;
-  font-weight: 400;
+  font-variation-settings: 'wght' 400;
   color: var(--accent-color);
 }
 
@@ -262,85 +262,6 @@
 
 .card__icon-button:focus-visible {
   border: 2px solid var(--accent-color);
-}
-
-.like-icon {
-  inline-size: 100%;
-  block-size: 100%;
-  cursor: pointer;
-}
-
-.like-icon .main-body {
-  transition-property: fill;
-  transition-timing-function: linear;
-  transition-duration: 0.3s;
-  transition-delay: 0s;
-}
-
-.like-icon:hover .main-body {
-  transition-property: fill;
-  transition-delay: 0.05s;
-  --heart-icon-body: var(--heart-icon-contour);
-}
-
-.like-icon:active .main-body {
-  transition-property: fill;
-  transition-delay: 0.05s;
-  --heart-icon-body: var(--heart-icon-sparks);
-}
-
-.like-icon .core {
-  transition-property: fill;
-  transition-duration: 0.3s;
-  transition-delay: 0.03s;
-  transition-timing-function: linear;
-}
-
-.like-icon:hover .core {
-  transition-property: fill;
-  transition-delay: 0s;
-  --heart-icon-core: var(--heart-icon-contour);
-}
-
-.like-icon:active .core {
-  transition-property: fill;
-  transition-delay: 0s;
-  --heart-icon-core: var(--heart-icon-sparks);
-}
-
-.like-icon .contour {
-  transition-property: fill;
-  transition-delay: 0s;
-  transition-duration: 0.1s;
-}
-
-.like-icon:active .contour {
-  transition-property: fill;
-  transition-delay: 0.06s;
-  transition-duration: 0.3s;
-  --heart-icon-contour: var(--heart-icon-sparks);
-}
-
-.like-icon .sparks {
-  opacity: 0;
-}
-
-.like-icon.is-liked .heart {
-  animation-name: heartScale;
-  animation-delay: 0.1s;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-in;
-  transform-origin: center;
-  --heart-icon-contour: var(--heart-icon-sparks);
-  --heart-icon-core: var(--heart-icon-sparks);
-  --heart-icon-body: var(--heart-icon-sparks);
-}
-
-.like-icon.is-liked .sparks {
-  animation-name: sparks;
-  animation-delay: 0.3s;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-in;
 }
 
 .card__like-button {
@@ -394,20 +315,20 @@
   mix-blend-mode: difference;
 }
 
-.footer {
+.memory {
   display: flex;
   justify-content: center;
   margin: 52px auto 105px;
 }
 
-.footer__button {
+.memory__button {
   gap: 8px;
   align-items: center;
   min-inline-size: 335px;
   min-block-size: 51px;
 }
 
-.footer__button__icon {
+.memory__button__icon {
   inline-size: 21px;
   block-size: 21px;
   position: relative;
@@ -465,55 +386,18 @@
 }
 
 @media (width <= 375px) {
-
-  .footer__button {
+  .memory__button {
     flex-direction: column;
     min-block-size: 84px;
     min-inline-size: 306px;
   }
 
-  .footer__button__icon {
+  .memory__button__icon {
     inline-size: 28px;
     block-size: 28px;
   }
 
   .modal {
     padding: 30px 40px;
-  }
-}
-
-@keyframes choosing {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(-4px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-@keyframes heartScale {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.5);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes sparks {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
   }
 }
