--- a/styles/themes.css
+++ b/styles/themes.css
@@ -51,14 +51,11 @@
     --heart-icon-body: transparent;
   }
 
-  @supports (font-variation-settings: normal) {
-    .card__title {
-      font-weight: 785;
-    }
-
-    .card__text {
-      font-weight: 465;
-    }
+  .card__title {
+    font-variation-settings: "wght" 785;
   }
 
+  .card__text {
+    font-variation-settings: "wght" 465;
+  }
 }
