--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-display: swap;
-  font-family: "Inter";
+  font-family: "Inter-Variable";
   src: local("Inter-Variable"),
     url("Inter-Variable.woff2") format("woff2 supports variations"),
     url("Inter-Variable.woff2") format("woff2-variations");
