--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
   background-color: var(--bg-color);
   color: var(--accent-color);
   font-family: var(--font-family);
-  font-variation-settings: "wght" var(--page-text-weight);;
+  font-variation-settings: "wght" var(--page-text-weight);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
